Change Create User Profile API to Add Roles API
- Allow user to add consumer and provider roles along with
resource servers they want to be associated for each role
- Updated request, response in OpenAPI
- API endpoint **NOT CHANGED**
