# docs/openapi.yaml
@@ -635,11 +635,11 @@ paths:
     parameters: []
   /auth/v1/user/profile:
     post:
-      summary: Create User Profile
+      summary: Add roles
       operationId: post-auth-v1-user-profile
       responses:
-        '201':
-          description: The user profile has been created successfully. The client ID and client secret is also returned. **The client secret is ONLY shown to the user here and can never be obtained again.**
+        '200':
+          description: The roles have been added.
           headers:
             Content-Type:
               schema:
@@ -653,9 +653,8 @@ paths:
                 x-examples:
                   example-1:
                     type: 'urn:dx:as:Success'
-                    title: User created
+                    title: The requested roles have been added.
                     results:
-                      keycloakId: c0c52fd1-e9de-456c-b553-8d408e8d2a42
                       name:
                         firstName: Foo
                         lastName: Bar
@@ -665,12 +664,8 @@ paths:
                       clients:
                         - client: default
                           clientId: 6d0b58c3-c0c4-48af-bca2-4f255c0e73a7
-                          clientSecret: a18cb9fc-06b3-4ae5-8220-86fc4e89a1a6
                       email: ngoaf@chspomvjuq.com
                       phone: '9989967899'
-                      organization:
-                        name: example
-                        url: example.com
                 properties:
                   type:
                     type: string
@@ -681,11 +676,9 @@ paths:
                   results:
                     type: object
                     required:
-                      - keycloakId
                       - name
                       - roles
                       - userId
-                      - clients
                       - email
                     properties:
                       keycloakId:
@@ -723,44 +716,25 @@ paths:
                             clientId:
                               type: string
                               minLength: 1
-                            clientSecret:
-                              type: string
-                              minLength: 40
-                              maxLength: 40
-                              pattern: '^[0-9a-f]{40}$'
                           required:
                             - clientName
                             - clientId
-                            - clientSecret
                       email:
                         type: string
                         minLength: 1
                       phone:
                         type: string
                         minLength: 1
-                      organization:
-                        type: object
-                        properties:
-                          name:
-                            type: string
-                            minLength: 1
-                          url:
-                            type: string
-                            minLength: 1
-                        required:
-                          - name
-                          - url
                 required:
                   - type
                   - title
                   - results
               examples:
-                User Profile Response:
+                Add Roles Response:
                   value:
                     type: 'urn:dx:as:Success'
-                    title: User created
+                    title: Requested roles have been added
                     results:
-                      keycloakId: c0c52fd1-e9de-456c-b553-8d408e8d2a42
                       name:
                         firstName: Foo
                         lastName: Bar
@@ -770,18 +744,11 @@ paths:
                       clients:
                         - clientName: default
                           clientId: 6d0b58c3-c0c4-48af-bca2-4f255c0e73a7
-                          clientSecret: 73b66ab55ba4d07ea487310679aa0689b4bd2c9d
                       email: ngoaf@chspomvjuq.com
                       phone: '9919967211'
-                      organization:
-                        name: example
-                        url: example.com
         '400':
           description: |-
             - Malformed or missing data
-            - `orgId` not sent when registering as provider/delegate
-            - `orgId` does not exist
-            - `orgId` domain does not match email address domain
           headers:
             Content-Type:
               schema:
@@ -847,64 +814,49 @@ paths:
           description: Keycloak Issued token
           required: true
       description: |-
-        Create a new user profile. Users are required to have a user profile in order to interact with the IUDX AAA Server. During creation, they may specify what roles they would like to obtain. Current valid roles are:
+        Add roles. Current valid roles are:
         - **consumer**, which allows users to access to secure resource via tokens
         - **provider**, which allows users to manage their resources across the IUDX sub systems
-        - **delegate**, which allows users to perform tasks on behalf of a provider, mainly
-          - manage catalogue items
-          - manage data on resource servers
-          - manage policies
           
-        ## Client ID and Client Secret
-        On successful creation of the user profile, the user would receive a client ID and a client secret. The client ID and client secret can be used instead of the OIDC flow to request for tokens. **The client secret is ONLY shown to the user here and can never be obtained again.**
         ## Provider registration
         **Once a Provider has registered successfully, their registration request is subject to approval by an IUDX admin**. The `provider` role would not be part of the user profile till the user has been approved.
       requestBody:
         content:
           application/json:
             schema:
-              description: ''
               type: object
+              anyOf:
+                - required: [consumer]
+                - required: [provider]
+              additionalProperties: false
               properties:
-                roles:
+                consumer:
                   type: array
                   minItems: 1
                   uniqueItems: true
-                  maxItems: 4
                   items:
                     type: string
-                    enum:
-                      - provider
-                      - consumer
-                      - delegate
-                    minLength: 5
-                    maxLength: 10
-                orgId:
-                  type: string
-                  format: uuid
-                  minLength: 36
-                  maxLength: 36
-                  pattern: '^[0-9a-f]{8}\b-[0-9a-f]{4}\b-[0-9a-f]{4}\b-[0-9a-f]{4}\b-[0-9a-f]{12}$'
+                provider:
+                  type: array
+                  minItems: 1
+                  uniqueItems: true
+                  items:
+                    type: string
                 phone:
                   type: string
                   example: '9900990099'
                   pattern: '^[9876]\d{9}$'
                   minLength: 10
                   maxLength: 10
-              required:
-                - roles
             examples:
-              Create UserProfile:
+              Add roles:
                 value:
-                  roles:
-                    - provider
-                    - consumer
-                    - delegate
-                  orgId: 123e4567-e89b-12d3-a456-426614174000
+                  consumer:
+                    - rs.cop.in
+                  provider:
+                    - rs.cop.in
+                    - rs-one.cop.in
         description: |-
-          - `orgId` is a valid organization ID obtain from the `GET /auth/v1/organizations` API
-          - **`orgId` is required for `provider` and `delegate` roles**
-          - **The domain of the email address of the registering user must match the organization domain**
         required: true
       tags:
         - User APIs
